# MetaPRISM_Public

./: .gitignore  .gitmodules  LICENSE  README.md
code/: README.md  master.sh
code/functions/pyprism/: Makefile  README.md  setup.cfg
code/functions/pyprism/pyprism/data/: __init__.py  _convert_naming_conventions.py  _filepaths.py  _load_bio.py  _load_cln.py  _load_colors.py  _load_dsg.py  _load_ids.py  _load_res.py  _load_rna.py  _load_summary.py  _load_wes.py  _loaders.py  _util_data.py  _util_load.py  _util_rna.py
code/functions/pyprism/pyprism/data/tests/: test_convert_naming_conventions.py  test_load_bio.py  test_load_cln.py  test_load_col.py  test_load_dsg.py  test_load_ids.py  test_load_res.py  test_load_rna.py  test_load_summary.py  test_load_wes.py  test_loaders.py  test_util_data.py
code/functions/pyprism/pyprism/plotting/: __init__.py  axconfig.py
code/functions/pyprism/pyprism/stats/: __init__.py  _neighborhood.py
code/functions/pyprism/pyprism/stats/tests/: test_neighborhood.py
code/functions/pyprism/pyprism/survival/: __init__.py  kaplan_meier.py  tests_survival.py  tests_table.py
code/functions/pyprism/pyprism/util/: __init__.py  _setwd.py  _utils.py
code/functions/pyprism/pyprism/util/tests/: test_setwd.py  test_utils.py
code/functions/pyprismtools/: README.md  setup.cfg
code/functions/pyprismtools/pyprismtools/: __init__.py  plot_holoviews.py  plot_plotly.py  util_plot.py
data/: Confidentiality_form_Gustave_Roussy.doc  Data transfer EC contractual clauses - EN.doc  Data_access_policy.doc  README.md  STUDY SYNOPSIS.docx
(+402 files in other folders)
