[metadata]
name = pyprism
description = "Supporting functions for the META-Prism project"
license = BSD 3-Clause License
version = 2.3.9
classifiers =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = 
    pyprism
    pyprism.data
    pyprism.stats
    pyprism.util
install_requires = 
    numpy >= 1.19.1
    pandas >= 1.2.1
    joblib >= 0.17.0
    openpyxl >= 3.0.6
    scipy >= 1.6.0
    seaborn >= 0.11.1
    tqdm >= 4.56.0
    xlsxwriter >= 1.3.7
    pyyaml >= 5.4.1
