[metadata]
name = pyprismtools
description = "Supporting functions for the META-Prism project"
url = "https://github.com/gustaveroussy/MetaPRISM/tree/master/functions"
license = "GNU General Public License v3 or later (GPLv3+)"
version = 1.0.0
classifiers =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires = 
    holoviews
    matplotlib
    numpy
    pandas
